added store name

--- a/.tbstore/configuration.yml
+++ b/.tbstore/configuration.yml
@@ -7,6 +7,7 @@ tags:
   - marketing
   - email
   - advertising
+  - blocknewsletter
 description_short: The block newsletter allows you to add an email newsletter signup to your site.
 description: description.md
 images:
